--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "mongodb": "^6.2.0",
     "next": "13.5.6",
     "react": "^18",
