--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "mongodb": "^6.2.0",
+    "mongoose": "^8.1.1",
     "next": "13.5.6",
-    "react": "^18",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
