--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.1.1",
     "next": "13.5.6",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
